axum-macros/tests/debug_handler/fail/generics_fail_from_request.stderr
error[E0277]: the trait bound `&'static str: FromRequestParts<()>` is not satisfied
 --> tests/debug_handler/fail/generics_fail_from_request.rs:6:27
  |
6 | async fn handler<T>(_foo: T) -> impl IntoResponse {
  |                           ^ the trait `FromRequestParts<()>` is not implemented for `&'static str`
  |
  = help: the following other types implement trait `FromRequestParts<S>`:
            <() as FromRequestParts<S>>
            <(T1, T2) as FromRequestParts<S>>
            <(T1, T2, T3) as FromRequestParts<S>>
            <(T1, T2, T3, T4) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5, T6) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5, T6, T7) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5, T6, T7, T8) as FromRequestParts<S>>
          and 25 others
  = note: required because of the requirements on the impl of `FromRequest<(), Body, axum_core::extract::private::ViaParts>` for `&'static str`
note: required by a bound in `__axum_macros_check_handler_0_0_from_request_check`
 --> tests/debug_handler/fail/generics_fail_from_request.rs:5:1
  |
5 | #[debug_handler(with(T = &'static str, T = Path<String>))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__axum_macros_check_handler_0_0_from_request_check`
6 | async fn handler<T>(_foo: T) -> impl IntoResponse {
  |                           - required by a bound in this
  = note: this error originates in the attribute macro `debug_handler` (in Nightly builds, run with -Z macro-backtrace for more info)
